--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/css.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,18 +18,53 @@
     <![endif]-->
 </head>
 <body>
+    <nav class="navbar navbar-fixed-top barTop"> 
+        <div class="container"> 
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="col-lg-2 navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            <a class="navbar-brand" href="#"><img src="images/logoMentos.png" class="img-responsive" alt=""></a></div>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="defaultNavbar1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">a promoção</a></li>
+              <li><a href="#">o filme</a></li>
+              <li><a href="#">Como participar</a></li>
+              <li><a href="#">produtos</a></li>
+              <li><a href="#">regulamento</a></li>
+              <li><a href="#">lojas</a></li>
+            </ul>
+          </div>
+          <!-- /.navbar-collapse --> 
+        </div>
+        <!-- /.container-fluid --> 
+      </nav>
+<Header class="container-fluid bgHeader">
+  <div class="container">
+    <div class="row" style="height:1075px">
+      <div class="col-lg-12">
+        <div class="row">
+          <div class="col-lg-2 logoOne">
+            
+          </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</Header>
 
 
 
 
 
 
-
-  
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script>
+<script src="js/js.js"></script>
 </body>
 </html>
