--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="defaultNavbar1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">a promoção</a></li>
-              <li><a href="#">o filme</a></li>
+              <li><a href="#header">a promoção</a></li>
+              <li><a href="#o-filme">o filme</a></li>
               <li><a href="#">Como participar</a></li>
               <li><a href="#">produtos</a></li>
               <li><a href="#">regulamento</a></li>
@@ -39,23 +39,32 @@
         </div>
         <!-- /.container-fluid --> 
       </nav>
-<Header class="container-fluid bgHeader">
+<Header id="header" class="container-fluid bgHeader">
   <div class="container">
-    <div class="row" style="height:1075px">
+    <div class="row headerMargin">
       <div class="col-lg-12">
-        <div class="row">
-          <div class="col-lg-2 logoOne">
-            
-          </div>
-            
-          </div>
-        </div>
+        <p class="txtHeaderOne">promoção</p>
+        <p><img src="images/logoMentos.png" class="img-responsive center-block" alt=""></p>
+        <p class="txtHeaderTwo">te leva ao cinema</p>
+        <p class="txtHeaderThree">Para assitir o Filme</p>
+        <p><img src="images/logoFilme.png" class="img-responsive center-block" alt=""></p>
+        <p class="txtHeaderFour">29 DE NOVEMBRO NOS CINEMAS</p>
+      </div>
+    </div>
+    <div class="row btnMargin">
+      <div class="col-lg-3 col-lg-offset-3">
+        <a href=""><button type="button" class="btn btn-primary btn-lg">COMO PARTICIPAR</button></a>
+      </div>
+      <div class="col-lg-3">
+        <a href=""><button type="button" class="btn btn-outline-primary btn-lg">LOJAS PARTICIPANTES</button></a>
       </div>
     </div>
   </div>
 </Header>
 
+<section id="o-filme">
 
+</section>
 
 
 
