--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top barTop"> 
+    <nav class="navbar navbar-fixed-top "> 
         <div class="container"> 
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="col-lg-2 navbar-header">
@@ -62,8 +62,33 @@
   </div>
 </Header>
 
-<section id="o-filme">
-
+<section id="o-filme" class="container-fluid bgFilme">
+  <div class="container">
+    <div class="row marginFilme">
+      <div class="col-lg-7">
+        <p class="txtFilmeOne">O Filme <span class="txtFilmeOneB">(Sinopse)</span></p>
+        <p class="txtFilmeTwo">A origem da famosa lenda sobre o ladrão que rouba dos ricos para dar aos pobres. Robin Hood (Taron Egerton) volta das Cruzadas e surpreende-se ao encontrar a Floresta Sherwood infestada de criminosos, no mais completo caos. Ele não deixará que as coisas permaneçam desse jeito.</p>
+        <p><img src="images/data.png" class="img-responsive" alt=""></p>
+      </div>
+      <div class="col-lg-5">
+          <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ZezDUSrcY38?controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="row marginFilmeB">
+      <div class="col-lg-4">
+        <p class="txtFilmeThree">roteiro / direção</p>
+        <p class="txtFilmeFour">Otto Bathurst (Diretor)<br/>Joby Harold (Roteirista)</p>
+      </div>
+      <div class="col-lg-4">
+        <p class="txtFilmeThree">produção</p>
+        <p class="txtFilmeFour">Leonardo DiCaprio (Produtor)<br/>Jennifer Davisson (Produtora)<br/>Joby Harold (Produtor)</p>
+      </div>
+      <div class="col-lg-4">
+        <p class="txtFilmeThree">empresas</p>
+        <p class="txtFilmeFour">PARIS FILMES (Distribuição)<br/>LIONSGATE (Produção)</p>
+      </div>
+    </div>
+  </div>
 </section>
 
 
