rh 09 - page KV

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <![endif]-->
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top "> 
+
+<nav class="navbar navbar-fixed-top "> 
         <div class="container"> 
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="col-lg-2 navbar-header">
@@ -38,7 +39,8 @@
           <!-- /.navbar-collapse --> 
         </div>
         <!-- /.container-fluid --> 
-      </nav>
+</nav>
+
 <Header id="header" class="container-fluid bgHeader">
   <div class="container">
     <div class="row headerMargin">
@@ -166,6 +168,18 @@
   </div>
 </section>
 
+<section id="kv" class="container-fluid kv">
+  <div class="container">
+    <div class="row marginKv">
+      <div class="col-lg-6">
+        <img src="images/promo.png" class="img-resposive center-block" alt="">
+      </div>
+      <div class="col-lg-6">
+          <img src="images/promoB.png" class="img-resposive center-block" alt="">
+        </div>
+    </div>
+  </div>
+</section>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
