--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-fixed-top "> 
+<nav class="navbar navbar-fixed-top"> 
         <div class="container"> 
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="col-lg-2 navbar-header">
@@ -30,7 +30,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#header">a promoção</a></li>
               <li><a href="#o-filme">o filme</a></li>
-              <li><a href="#">Como participar</a></li>
+              <li><a href="#como-participar">Como participar</a></li>
               <li><a href="#">produtos</a></li>
               <li><a href="#">regulamento</a></li>
               <li><a href="#">lojas</a></li>
@@ -172,13 +172,41 @@
   <div class="container">
     <div class="row marginKv">
       <div class="col-lg-6">
-        <img src="images/promo.png" class="img-resposive center-block" alt="">
+        <img src="images/promo.png" class="img-responsive center-block" alt="">
       </div>
       <div class="col-lg-6">
-          <img src="images/promoB.png" class="img-resposive center-block" alt="">
+          <img src="images/promoB.png" class="img-responsive center-block" alt="">
         </div>
     </div>
   </div>
+</section>
+
+<section id="como-participar" class="container-fluid participar">
+    <div class="container marginParticipar">
+      <div class="row marginha">
+        <div class="col-lg-12">
+            <p class="txtHeaderTwo">como participar</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="images/carrinho.png" class="img-responsive center-block" alt="">
+          <p class="txtPartOne">#1 compre</p>
+          <p class="txtPartTwo">Compre 4 Mentos* nas lojas<br/>participantes da promoção.</p>
+          <p class="txtPartThree">*Confira os produtos e lojas participantes!</p>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/ingresso.png" class="img-responsive center-block" alt="">
+          <p class="txtPartOne">#2 ganhe</p>
+          <p class="txtPartTwo">Retire na hora o seu ingresso para<br/> assistir Robin Hood -<br/>A Origem nos cinemas.</p>
+        </div>
+        <div class="col-lg-4">
+          <img src="images/pipoca.png" class="img-responsive center-block" alt="">
+          <p class="txtPartOne">#3 divirta-se</p>
+          <p class="txtPartTwo">Agora é so pegar seu mentos ir ao<br/>cinema, escolher o seu assento e<br/>curtir o filme. </p>
+        </div>
+      </div>
+    </div>
 </section>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
