--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/css.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,8 +33,8 @@
               <li><a href="#o-filme">o filme</a></li>
               <li><a href="#como-participar">Como participar</a></li>
               <li><a href="#produtos">produtos</a></li>
-              <li><a href="#">regulamento</a></li>
-              <li><a href="#">lojas</a></li>
+              <li><a href="#lojas">regulamento</a></li>
+              <li><a href="#lojas">lojas</a></li>
             </ul>
           </div>
           <!-- /.navbar-collapse --> 
@@ -356,7 +357,43 @@
         </div>
       </div>
     </div>
-  </section>
+</section>
+
+<section id="lojas" class="container-fluid participar">
+  <div class="container">
+    <div class="row marginLojas">
+      <div class="col-lg-6">
+        <img src="images/balas.png" class="img-responsive center-block" alt="">
+      </div>
+      <div class="col-lg-6 marginhaOne">
+        <p class="txtLojasOne">Lojas<br/>participantes!</p>
+        <p class="txtLojastwo">Confira a lista completa das lojas participantes da<br/>promoção.</p>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row marginhaOne">
+              <div class="col-lg-3">
+                <a href=""><button type="button" class="btn btnLista">VEJA A LISTA</button></a>
+              </div>
+              <div class="col-lg-3">
+                <a href=""><button type="button" class="btn btnReg">REGULAMENTO</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid bgRodape"> 
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <p class="txtRodape">Na compra de 4 produtos Mentos ganhe 1 ingresso para assistir ao filme ROBIN HOOD - A Origem. Produtos participantes da promoção: Stick 37,5g e Gomas 3 Camadas. Convite válido de 2a a 4a feira, exceto feriados em qualquer cinema onde o filme estiver sendo exibido, exceto exibições nas salas 3D, XD, Dbox, Prime, Xplus, Delux, Imax, Premier e demais salas Vips descritas no rodapé do ingresso. Confira o regulamento.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
