rh 13 - footer and regulamento

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li><a href="#o-filme">o filme</a></li>
               <li><a href="#como-participar">Como participar</a></li>
               <li><a href="#produtos">produtos</a></li>
-              <li><a href="#lojas">regulamento</a></li>
+              <li><a data-toggle="modal" data-target="#exampleModal" class="btnOne">regulamento</a></li>
               <li><a href="#lojas">lojas</a></li>
             </ul>
           </div>
@@ -375,7 +375,7 @@
                 <a href=""><button type="button" class="btn btnLista">VEJA A LISTA</button></a>
               </div>
               <div class="col-lg-3">
-                <a href=""><button type="button" class="btn btnReg">REGULAMENTO</button></a>
+                <a data-toggle="modal" data-target="#exampleModal"><button type="button" class="btn btnReg" >REGULAMENTO</button></a>
               </div>
             </div>
           </div>
@@ -394,6 +394,91 @@
     </div>
   </div>
 </section>
+
+<footer class="container-fluid">
+  <div class="container">
+    <div class="row marginFooter">
+      <div class="col-lg-12">
+        <img src="images/logofooter.png" class="img-responsive center-block" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="socialIcon">
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter-square"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <p class="txtFooter">© Mentos 2018<br/><br/>Todos os direitos reservados. Mentos® é uma marca registrada de Perfetti Van Melle Group B.V. </p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">REGULAMENTO</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h3> PROMOÇÃO “MENTOS TE LEVA AO CINEMA”</h3> <br/>
+<h4>Instituição</h4> <br/><br/>
+
+A promoção “Mentos te leva ao cinema” é instituída pela empresa, Perfetti, razão social Perfetti Van Melle Brasil Ltda., inscrita no CNPJ/MF sob o nº 02.097.007/0001-07 representada na forma de seu contrato social, doravante designada Mentos. Trata-se de promoção do tipo “compre e ganhe”, independente de sorteio, de que pode participar todo e qualquer consumidor que efetuar compra no período e condições descritas neste regulamento.
+<br/><br/>
+<h4>Período</h4><br/><br/>
+
+1.	A promoção aprovada pela empresa Mentos em 18/09/2018 terá início nas lojas participantes descritas aqui no site e é válida enquanto o filme estiver em cartaz. 
+<br/><br/>
+<h4>Participação</h4><br/><br/>
+
+2.	Poderão participar da promoção todos os consumidores residentes e domiciliados no Brasil, que efetuarem compras de 4 produtos Mentos durante o período da promoção, em qualquer uma das lojas participantes, sendo permitida a participação de menores de 18 (dezoito) anos, conforme mecânica descrita abaixo: <br/><br/>
+
+Mecânica: Na compra de 4 produtos Mentos ganhe 1 ingresso para assistir ao filme Robin Hood – A Origem. Produtos participantes da promoção: Stick 37,5g e Gomas 3 camadas qualquer sabor. Convite individual, válido de 2ª a 4ª feira, exceto feriados, em qualquer cinema onde o filme estiver sendo exibido, exceto os cinemas 3d, 4d, imax, vip, salas premium e salas descritas no rodapé do ingresso. Verifique a classificação indicativa dos filmes. Para maiores informações consulte o regulamento desta ação promocional na Loja Participante ou no site: www.mentostelevaaocinema.com.br
+<br/><br/>
+3.	Por se tratar de convites promocionais entregues sem nenhum custo ao beneficiário, a empresa não se responsabiliza pela relação entre as salas exibidoras e os contemplados, sendo de inteira responsabilidade destes a escolha de onde assistir ao filme. A empresa também não se responsabiliza pelo teor e conteúdo do filme. 
+<br/><br/>
+4.	Não será admitida a apresentação isolada de comprovantes de compras de datas retroativas, e sem que fique comprovado que a compra foi realizada na hora, e nas lojas participantes dentro do período da promoção. 
+<br/><br/>
+5.	Os convites deverão ser retirados na hora, no ato da compra, durante o período da promoção e somente nas lojas participantes onde a compra foi efetuada, não podendo ser reclamado posteriormente. 
+<br/><br/>
+6.	 Os convites não poderão ser convertidos em dinheiro, bem como não poderão ser trocados por outro produto e sua venda é proibida.
+<br/><br/>
+
+<h4>Condições Gerais</h4><br/><br/>
+
+7.	 A Empresa reserva-se ao direito de vedar a entrega de convites ao cliente que não preencher as condições estabelecidas neste regulamento, bem como aquele que atue de forma a desvirtuar, burlar ou fraudar a promoção. Para efeito desta cláusula, considera-se fraude a participação através da obtenção de benefício/vantagem de forma ilícita ou contra os termos do presente regulamento.
+<br/><br/>
+8.	O PARTICIPANTE declara-se ciente que os convites não representam direito adquirido do participante na hipótese de nova promoção futuramente realizada pela Empresa.
+<br/><br/>
+9.	 Eventuais casos omissos e dúvidas serão solucionados por uma comissão julgadora composta por representantes da Promoção ou na própria loja das redes participantes
+<br/><br/>
+10.	 Esta promoção é válida apenas para compras efetuadas nas lojas participantes durante o período da promoção.
+<br/><br/>
+11.	 Os participantes autorizam, desde já, sem nenhuma remuneração, o uso de seu nome, imagem e voz em filmes, vídeos e fotos, no prazo de até 1 (um) ano após o encerramento da promoção.                     
+<br/><br/>
+12.	 O regulamento desta promoção ficará disponível nas lojas participantes e no site, sendo que a participação implica na aceitação total e irrestrita de todos os seus itens.
+<br/><br/>
+13.	 Maiores esclarecimentos sobre essa promoção podem ser resolvidos diretamente no SAC/Caixa das lojas participantes. Qualquer crítica, sugestão ou duvida podem ser atendidas através do endereço eletrônico: rsvp@bluegg.com.br
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
