--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -25,7 +25,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="col-lg-2 navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#defaultNavbar1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            <a class="navbar-brand" href="index.php"><img src="images/logoMentos.png" class="img-responsive" alt=""></a></div>
+            <a class="navbar-brand" href="index.php"><img src="images/logoMentos.png" class="img-responsive logoMobile" alt=""></a></div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="defaultNavbar1">
             <ul class="nav navbar-nav navbar-right">
@@ -47,7 +47,7 @@
     <div class="row headerMargin">
       <div class="col-lg-12">
         <p class="txtHeaderOne">promoção</p>
-        <p><img src="images/logoMentos.png" class="img-responsive center-block" alt=""></p>
+        <p><img src="images/logoMentos.png" class="img-responsive center-block LogoMobileOne" alt=""></p>
         <p class="txtHeaderTwo">te leva ao cinema</p>
         <p class="txtHeaderThree">Para assitir o Filme</p>
         <p><img src="images/logoFilme.png" class="img-responsive center-block" alt=""></p>
@@ -56,10 +56,10 @@
     </div>
     <div class="row btnMargin">
       <div class="col-lg-3 col-lg-offset-3">
-        <a href=""><button type="button" class="btn btn-primary btn-lg">COMO PARTICIPAR</button></a>
+        <a href="#como-participar"><button type="button" class="btn btn-primary btn-lg">COMO PARTICIPAR</button></a>
       </div>
       <div class="col-lg-3">
-        <a href=""><button type="button" class="btn btn-outline-primary btn-lg">LOJAS PARTICIPANTES</button></a>
+        <a href="#lojas"><button type="button" class="btn btn-outline-primary btn-lg">LOJAS PARTICIPANTES</button></a>
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
       <div class="col-lg-7">
         <p class="txtFilmeOne">O Filme <span class="txtFilmeOneB">(Sinopse)</span></p>
         <p class="txtFilmeTwo">A origem da famosa lenda sobre o ladrão que rouba dos ricos para dar aos pobres. Robin Hood (Taron Egerton) volta das Cruzadas e surpreende-se ao encontrar a Floresta Sherwood infestada de criminosos, no mais completo caos. Ele não deixará que as coisas permaneçam desse jeito.</p>
-        <p><img src="images/data.png" class="img-responsive" alt=""></p>
+        <p><img src="images/data.png" class="img-responsive imgDataMobile" alt=""></p>
       </div>
       <div class="col-lg-5">
           <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ZezDUSrcY38?controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -94,7 +94,7 @@
   </div>
 </section>
 
-<section id="personagens" class="container-fluid characters">
+<section id="personagens" class="container-fluid characters hidden-xs hidden-sm">
   <div class="container">
     <div class="row marginCharacters">
       <div class="row">
@@ -164,6 +164,84 @@
             </a>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="personagens" class="container-fluid characters hidden-lg hidden-md">
+  <div class="container">
+    <div class="row marginCharacters">
+      <div class="row">
+        <div class="col-lg-12">
+          <p class="txtHeaderTwo">Personagens</p>
+        </div>
+      </div>
+      <div class="row">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                  <li data-target="#carouselCharactersMobile" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselCharactersMobile" data-slide-to="1"></li>
+                  <li data-target="#carouselCharactersMobile" data-slide-to="2"></li>
+                  <li data-target="#carouselCharactersMobile" data-slide-to="3"></li>
+                  <li data-target="#carouselCharactersMobile" data-slide-to="4"></li>
+                  <li data-target="#carouselCharactersMobile" data-slide-to="5"></li>
+              </ol>
+            
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                  <div class="item active">
+                      <img src="images/img01.png" class="img-responsive center-block" alt="">
+                      <p class="txtCharactersOne">Taron Egerton</p>
+                      <p class="txtCharactersTwo">Personagem: Robin Hood</p>
+                  </div>
+                  <div class="item"> 
+                    <img src="images/img02.png" class="img-responsive center-block" alt="">
+                    <p class="txtCharactersOne">Jamie Foxx</p>
+                    <p class="txtCharactersTwo">Personagem: Little John</p>
+                  </div>
+                  <div class="item">
+                    <img src="images/img03.png" class="img-responsive center-block" alt="">
+                    <p class="txtCharactersOne">Eve Hewson</p>
+                    <p class="txtCharactersTwo">Personagem: Maid Mariam</p>
+                  </div>
+                  <div class="item">
+                    <img src="images/img04.png" class="img-responsive center-block" alt="">
+                    <p class="txtCharactersOne">Jamie Dornan</p>
+                    <p class="txtCharactersTwo">Personagem: Will Scarlet</p>
+                  </div>
+                  <div class="item">
+                    <img src="images/img05.png" class="img-responsive center-block" alt="">
+                    <p class="txtCharactersOne">Tim Minchin</p>
+                    <p class="txtCharactersTwo">Personagem: Friar Tuck</p>
+                  </div>
+                  <div class="item">
+                    <img src="images/img06.png" class="img-responsive center-block" alt="">
+                    <p class="txtCharactersOne">Ben Madelsohn</p>
+                    <p class="txtCharactersTwo">Personagem: Sheriff of Nottingham</p>
+                  </div>
+              </div>
+            
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+          </div>          
+            <!-- Controls -->
+            <a class="left carousel-control" data-target="#carouselCharactersMobile" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" data-target="#carouselCharactersMobile" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
       </div>
     </div>
   </div>
